final commit after reporting